# tweety

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
docs/basic/: all-functions.rst
docs/misc/: changelog.rst
src/tweety/: __init__.py  bot.py  builder.py  http.py
src/tweety/types/: n_types.py  search.py  twDataTypes.py  usertweet.py
tests/: test_search.py
tweety/: bot.py  builder.py  http.py  utils.py
tweety/types/: n_types.py  searchtweet.py  twDataTypes.py  usertweet.py
