[tool.poetry]
name = "tweety"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
openpyxl = "^3.1.2"
dateutils = "^0.6.12"
tqdm = "^4.65.0"
pysocks = ">=1.7.1,<1.8.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.4"
autopep8 = "^2.0.2"
black = "^23.3.0"
sphinx = "6.2.1"
sphinx-rtd-theme = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]

[tool.pylint.'MASTER']
disable = [
  'too-few-public-methods',
  'no-name-in-module',
  'no-member',
  'missing-function-docstring',
  'missing-module-docstring',
  'missing-class-docstring',
  'bad-exception-context',      # annoying false positives
  'broad-except',
]
min-similarity-lines = 12
max-statements = 100
max-line-length = 120
max-branches = 15 # complicated monitor function
ignore-patterns = ".*_pb2\\.py,[0-9]+_.*\\.py"
good-names = ['i,j,k,x,y,e,c']

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_any_unimported = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
exclude = '''(?x)(
  _pb2\.py$
  | ^[0-9]_
)'''

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3

